@@ -1,0 +1,4 @@
+application/x-%APP_SYSNAME%
+	open=%APP_SYSNAME% %f
+	view=%APP_SYSNAME% %f
+	icon-filename=%MIME_ICON%
